ScrollingCoordinator: On layer update, add scrollOrigin instead of subtracting minimumScrollPosition.

BUG=625084

Review-Url: https://codereview.chromium.org/2111203004
Cr-Commit-Position: refs/heads/master@{#403478}

Former-commit-id: 9a591c7e2e4fca8ef2bb1d775422b3f15e55bae8